<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">

<EditText android:layout_height="wrap_content" android:layout_below="@+id/TextView01" android:layout_width="fill_parent" android:maxHeight="20px" android:minHeight="20px" android:id="@+id/TagText" android:hint="@string/search" android:focusable="true"></EditText>
<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/Cancel" android:text="@string/cancel" android:layout_alignParentRight="true" android:layout_below="@+id/TagText"></Button>
<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/Ok" android:text="@string/ok" android:layout_toLeftOf="@+id/Cancel" android:layout_below="@+id/TagText"></Button>
</RelativeLayout>
