<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_height="match_parent"
	android:layout_width="match_parent">
	<RelativeLayout android:layout_height="wrap_content"
		android:layout_width="match_parent" android:padding="5dp"
		android:id="@+id/relativeLayout1" android:background="#000000"
		android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
		<ImageView android:src="@drawable/recipal"
			android:layout_height="wrap_content" android:id="@+id/imageView1"
			android:layout_width="wrap_content" android:layout_alignParentLeft="true"
			android:layout_centerVertical="true"></ImageView>
	</RelativeLayout>
	<ScrollView android:layout_height="wrap_content"
		android:layout_width="match_parent" android:id="@+id/scrollview3"
		android:layout_below="@+id/relativeLayout1">
		<RelativeLayout android:layout_height="wrap_content"
			android:layout_width="wrap_content">
			<ImageView android:clickable="true" android:minWidth="75dp"
				android:maxWidth="75dp" android:maxHeight="75dp" android:padding="5dp"
				android:id="@+id/dialogImage" android:minHeight="75dp"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:adjustViewBounds="true" android:layout_below="@+id/relativeLayout1"
				android:layout_alignLeft="@+id/relativeLayout1" android:src="@drawable/ic_launcher" />
			<TextView android:id="@+id/dialogName"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:text="@string/app_name" android:layout_toRightOf="@+id/dialogImage"
				android:layout_alignTop="@+id/dialogImage" android:textStyle="bold"
				android:textSize="20dp" android:textColor="#0099FF"
				android:shadowColor="#FFFFFF" android:shadowDx="1" android:shadowDy="1"
				android:shadowRadius="1" />
			<TextView android:id="@+id/byname" android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:text="@string/byname"
				android:layout_toRightOf="@+id/dialogImage" android:layout_below="@+id/dialogName"
				android:textStyle="bold" />
			<TextView android:id="@+id/byemail" android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:text="@string/byemail"
				android:layout_toRightOf="@+id/dialogImage" android:layout_below="@+id/byname"
				android:textStyle="bold" android:paddingBottom="10dp" android:inputType="textEmailAddress" android:autoLink="email"/>
			<Button android:layout_height="wrap_content" android:text="@string/sharerecipal" android:id="@+id/sharerecipal" android:layout_width="wrap_content" android:layout_below="@+id/byemail" android:layout_alignParentLeft="true" android:layout_alignParentRight="true"></Button>
			<TextView android:text="@string/abouttext" android:paddingTop="5dp" android:layout_height="wrap_content" android:paddingLeft="5dp" android:id="@+id/abouttext" android:layout_width="wrap_content" android:paddingBottom="10dp" android:layout_below="@+id/sharerecipal" android:layout_alignLeft="@+id/sharerecipal"></TextView>

		</RelativeLayout>
	</ScrollView>
</RelativeLayout>
